<resources>
    <string name="app_name">RyanFlemingFinalProject</string>
    <string name="action_settings">Settings</string>
    <string name="button_expense">Add Expense</string>
    <string name="button_goal">Add Goal</string>
    <string name="button_calculate">Calculate</string>
    <string name="title_activity_add_expense">AddExpenseActivity</string>
    <string name="add_expense_value">Value</string>
    <string name="add_expense_name">Name</string>
    <string name="add_expense_title">Add A New Expense</string>
    <string name="add_string">Add</string>
    <string name="title_activity_view_expenses">ViewExpensesActivity</string>
    <string name="title_activity_calculator">CalculatorActivity</string>
    <string name="title_activity_add_goal">AddGoalActivity</string>
    <string name="string_add_goal_title">Add A New Goal</string>
    <string name="add_goal_cost">Cost</string>
    <string name="btn_submit">Submit</string>
    <string name="action_list_expenses">List Expenses</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="delete_string">Delete?</string>
    <string name="yes_string">Yes</string>
    <string name="no_string">No</string>
    <string name="title_activity_view_goal">ViewGoalActivity</string>
    <string name="action_goals">List Goals</string>
    <string name="goal_string">Goal</string>
    <string name="work_stats">Work Stats</string>
    <string name="wage_string">Wage</string>
    <string name="hours_week_string">Hours/Week</string>
    <string name="total_expenses_string">Total Expenses</string>
    <string name="total_income_string">Total Income</string>
    <string name="net_income_string">Net Income</string>
    <string name="net_earned_hr_string">Net Earned / Hr</string>
    <string name="hrs_to_goal_string">Hrs. To Goal</string>
    <string name="results_month_string">Results / Month</string>
    <string name="hourly_wage_string">Hourly Wage</string>
    <string name="calculate_string">Calculate</string>
    <string name="delete_all_string">Delete All</string>
</resources>
