<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.westga.ryanflemingfinalproject.View.AddExpenseActivity"
    tools:showIn="@layout/activity_add_expense">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/expenseValueTextEdit"
        android:layout_marginTop="86dp"
        android:layout_below="@+id/expenseNameTextEdit"
        android:layout_centerHorizontal="true"
        android:width="200dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/expenseNameTextEdit"
        android:layout_marginTop="27dp"
        android:width="200dp"
        android:layout_below="@+id/textView"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:inputType="text" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_string"
        android:id="@+id/btnExpense"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:onClick="onAddExpenseButtonClick"
        android:enabled="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/add_expense_title"
        android:id="@+id/textView"
        android:layout_marginTop="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/expenseValueTextEdit"
        android:layout_alignEnd="@+id/expenseValueTextEdit" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/add_expense_name"
        android:id="@+id/textView2"
        android:layout_below="@+id/expenseNameTextEdit"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/add_expense_value"
        android:id="@+id/textView3"
        android:layout_below="@+id/expenseValueTextEdit"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
